<resources>
    <string name="app_name">Note Pad</string>
    <string name="info">Info</string>
    <string name="new_note">New Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="last_edited">Last edited</string>
    <string name="body">Body</string>
    <string name="add_note_here">Add note here</string>
    <string name="prefsFileKey">MY_PREFS_KEY</string>
    <string name="saved_notes">SAVED_NOTES</string>
    <string name="file_name">saved-notes.json</string>
    <string name="contents">Contents</string>
    <string name="encoding">UTF-8</string>
    <string name="notes">Notes</string>
    <string name="no_file">No JSON Saved Notes file present</string>
    <string name="note_pad">Note Pad</string>
    <string name="version_string">Version 1.0</string>
    <string name="copyright">Copyright 2020, Olivia Chisman</string>
    <string name="background_image">background image</string>
</resources>